@@ -290,6 +290,16 @@
 #endif
 #endif
 
+/* UNALIGNED_OK means it's OK to do unaligned memory access, e.g.
+   loading an 8-byte word from an address that is not a multiple of 8.
+   On some systems, such an access causes a trap and a signal.
+*/
+
+#if defined(__sparc__)
+# define UNALIGNED_OK 0
+#else
+# define UNALIGNED_OK 1
+#endif
 
 
 /* CONFIGURE: Some systems seem to need more than standard program linkage
